# french_assistant

./: .env.example  .gitignore  LICENSE.md  README.md  french_assistant.ipynb  pyproject.toml  requirements.txt
data/knowledge_base/: grammar_articles.md  grammar_verbs.md  idioms_phrases.md  translation_difficulties.md
src/french_assistant/: __init__.py  __main__.py  default_config.yaml
src/french_assistant/core/: __init__.py  assistant.py  config.py
src/french_assistant/enhancements/: __init__.py  cove.py  crag.py  self_rag.py
src/french_assistant/retrieval/: __init__.py  query_expansion.py  retriever.py  vectorstore.py
src/french_assistant/safety/: __init__.py  filter.py  hallucination.py
src/french_assistant/utils/: __init__.py  logging.py  tracing.py
tests/: __init__.py  conftest.py  test_enhancements.py  test_safety.py
